--- a/1 Apa itu CSS Grid/style.css
+++ b/1 Apa itu CSS Grid/style.css
@@ -1,43 +1,55 @@
-body {
+body, html {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 2em;
+    font-family: arial;
+    font-size: 20px;
     color: white;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.container {
+    width: 600px;
+    margin: 50px auto;
+    border: 5px solid #333;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
 header {
-    text-align: center;
-    padding: 50px;
-    background-color: purple;
+    padding: 40px 0;
+    background-color: #B063D8;
 }
 
-aside {
-    text-align: center;
-    width: 40%;
-    padding: 50px 0;
-    background-color: blue;
+.content::after {
+    content: '';
+    display: block;
+    clear: both;
 }
 
-nav {
-    text-align: center;
+.sidebar {
+    float: left;
     width: 40%;
-    padding: 90px 0;
-    background-color: red;
+}
+
+.sidebar aside {
+    padding: 60px 0;
+    background-color: #2F93FF;
+}
+
+.sidebar nav {
+    padding: 100px 0;
+    background-color: #e45765;
 }
 
 main {
-    text-align: center;
     width: 60%;
-    padding: 159px 0;
-    background-color: brown;
+    padding: 171.5px 0;
+    background-color: #E0AA77;
     float: right;
-    margin-top: -354px;
 }
 
 footer {
-    text-align: center;
-    padding: 39px;
-    background-color: gray;
+    padding: 20px 0;
+    background-color: #666;
 }
