--- a/3 Columns dan Rows/style.css
+++ b/3 Columns dan Rows/style.css
@@ -9,8 +9,9 @@ body {
     width: 60%;
     margin: 50px auto;
     display: grid;
-    grid-template-columns: 100px 25% 200px 50px;
-    grid-template-rows: 100px;
+    grid-template-columns: 100px 50px;
+    grid-template-rows: 50px 30px;
+    grid-auto-flow: column;
 }
 
 .item {
