--- a/4 Spesial Keyword dan Functions/style.css
+++ b/4 Spesial Keyword dan Functions/style.css
@@ -9,7 +9,7 @@ body {
     width: 60%;
     margin: 50px auto;
     display: grid;
-    grid-template-columns: repeat(4, 1fr) repeat(5, 1.5fr);
+    grid-template-columns: 1fr max-content 1fr;
 }
 
 .item {
