--- a/4 Spesial Keyword dan Functions/style.css
+++ b/4 Spesial Keyword dan Functions/style.css
@@ -8,9 +8,8 @@ body {
 .container {
     width: 60%;
     margin: 50px auto;
-    border: 5px solid orange;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 100px);
+    grid-template-columns: 1fr minmax(200px, 300px) 1fr;
 }
 
 .item {
