--- a/5 Grid Area dan Grid Gap/style.css
+++ b/5 Grid Area dan Grid Gap/style.css
@@ -6,15 +6,16 @@ body {
 }
 
 .container {
-    width: 60%;
+    width: 90%;
     margin: 50px auto;
     display: grid;
-    /* grid-template-rows: [baris1-mulai] 50px [baris1-akhir baris2-awal] 100px [baris2-akhir];
-    grid-template-columns: 1fr 2fr 3fr;
-    grid-template-areas: 
-        'header header header'
-        'footer footer footer'; */
-    grid-template: [baris1-mulai] 'header header header' 50px [baris1-akhir baris2-awal] 'footer footer footer' 100px [baris2-akhir] / 1fr 2fr 3fr;
+    grid-template-columns: repeat(3, 1fr);
+    /* grid-column-gap: 10px; */
+    /* grid-row-gap: 10px; */
+    /* column-gap: 10px;
+    row-gap: 10px; */
+    /* grid-gap: 10px; */
+    gap: 10px;
 }
 
 .item {
@@ -22,21 +23,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 100px;
     box-sizing: border-box;
 }
 
 .item:nth-child(even) {
-    background-color: aquamarine;
-}
-
-.header {
-    background-color: lightblue;
-    grid-area: header;
-}
-
-.footer {
-    background-color: rgb(57, 57, 57);
-    grid-area: footer;
+    background-color: rgb(255, 142, 142);
 }
 
 /* Responsive Breakpoint */
