--- a/6 Grid Alignment/style.css
+++ b/6 Grid Alignment/style.css
@@ -10,32 +10,32 @@
     grid-template-rows: repeat(3, 130px);
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
-    /* justify-items: start; */
-    /* justify-items: end; */
-    /* justify-items: center; */
-    /* justify-items: stretch; */
+    /* align-items: start; */
+    /* align-items: end; */
+    /* align-items: center; */
+    /* align-items: stretch; */
 }
 
 .items {
     border: 3px solid black;
-    height: 100px;
+    width: 150px;
     background-color: lightblue;
 }
 
 .items.i1,
 .items.i4,
 .items.i7 {
-    width: 130px;
+    height: 100px;
 }
 
 .items.i2,
 .items.i5,
 .items.i8 {
-    width: 80px;
+    height: 50px;
 }
 
 .items.i3,
 .items.i6,
 .items.i9 {
-    width: 170px;
+    height: 80px;
 }
