--- a/6 Grid Alignment/style.css
+++ b/6 Grid Alignment/style.css
@@ -4,35 +4,25 @@
 }
 
 .container {
+    background-color: black;
     width: 80%;
     margin: auto;
     display: grid;
-    grid-template-rows: repeat(3, 130px);
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 120px 180px 120px;
+    grid-template-rows: 80px 80px;
     gap: 5px;
-    /* place-items: center end; */
+    /* justify-content: start; */
+    /* justify-content: end; */
+    /* justify-content: center; */
+    /* justify-content: stretch; */
+    /* justify-content: space-around; */
+    /* justify-content: space-between; */
+    /* justify-content: space-evenly; */
 }
 
 .items {
     border: 3px solid black;
-    width: 150px;
-    background-color: lightblue;
-}
-
-.items.i1,
-.items.i4,
-.items.i7 {
-    height: 100px;
-}
-
-.items.i2,
-.items.i5,
-.items.i8 {
+    width: 100px;
     height: 50px;
-}
-
-.items.i3,
-.items.i6,
-.items.i9 {
-    height: 80px;
+    background-color: lightblue;
 }
