--- a/6 Grid Alignment/style.css
+++ b/6 Grid Alignment/style.css
@@ -6,18 +6,19 @@
 .container {
     background-color: black;
     width: 80%;
+    height: 500px;
     margin: auto;
     display: grid;
     grid-template-columns: 120px 180px 120px;
     grid-template-rows: 80px 80px;
     gap: 5px;
-    /* justify-content: start; */
-    /* justify-content: end; */
-    /* justify-content: center; */
-    /* justify-content: stretch; */
-    /* justify-content: space-around; */
-    /* justify-content: space-between; */
-    /* justify-content: space-evenly; */
+    /* align-content: start; */
+    /* align-content: end; */
+    /* align-content: center; */
+    /* align-content: stretch; */
+    /* align-content: space-around; */
+    /* align-content: space-between; */
+    /* align-content: space-evenly; */
 }
 
 .items {
