--- a/6 Grid Alignment/style.css
+++ b/6 Grid Alignment/style.css
@@ -12,13 +12,8 @@
     grid-template-columns: 120px 180px 120px;
     grid-template-rows: 80px 80px;
     gap: 5px;
-    /* align-content: start; */
-    /* align-content: end; */
-    /* align-content: center; */
-    /* align-content: stretch; */
-    /* align-content: space-around; */
-    /* align-content: space-between; */
-    /* align-content: space-evenly; */
+    /* place-content: space-evenly; */
+    /* place-content: space-between; */
 }
 
 .items {
