--- a/7 Grid Item Properties/style.css
+++ b/7 Grid Item Properties/style.css
@@ -23,23 +23,15 @@
 .my-item {
     background-color: lightblue;
 
-    /* grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4; */
+    /* grid-column: 2 / 4;
+    grid-row: 2 / 4; */
 
-    /* grid-column-start: 1;
-    grid-column-end: span 3;
-    grid-row-start: 1;
-    grid-row-end: span 2; */
+    /* grid-column: 1 / span 2;
+    grid-row: 1 / span 2; */
 
-    /* grid-column-start: satu;
-    grid-column-end: empat;
-    grid-row-start: baris1;
-    grid-row-end: b4; */
+    /* grid-column: satu / empat;
+    grid-row: baris1 / b4; */
 
-    grid-column-start: -1;
-    grid-column-end: -2;
-    grid-row-start: -4;
-    grid-row-end: -1;
+    /* grid-column: -1 / -2;
+    grid-row: -4 / -1; */
 }
