--- a/7 Grid Item Properties/style.css
+++ b/7 Grid Item Properties/style.css
@@ -9,34 +9,19 @@
     display: grid;
     grid-template-columns: minmax(200px, 300px) repeat(2, 1fr);
     grid-template-rows: repeat(3, 100px);
-    grid-template-areas: 
-        'header header header'
-        'sidebar content content'
-        'footer footer footer';
 }
 
 .item {
     display: flex;
+    align-content: center;
     justify-content: center;
-    align-items: center;
 }
 
-.header {
+.my-item {
     background-color: lightblue;
-    grid-area: header;
-}
 
-.sidebar {
-    background-color: salmon;
-    grid-area: sidebar;
-}
+    /* grid-row: 2/4;
+    grid-column: 1/3; */
 
-.content {
-    background-color: lightgreen;
-    grid-area: content;
-}
-
-.footer {
-    background-color: silver;
-    grid-area: footer;
+    grid-area: 2/1/4/3;
 }
