--- a/7 Grid Item Properties/style.css
+++ b/7 Grid Item Properties/style.css
@@ -20,8 +20,13 @@
 .my-item {
     background-color: lightblue;
 
-    /* grid-row: 2/4;
-    grid-column: 1/3; */
+    /* justify-self: start; */
+    /* justify-self: end; */
+    /* justify-self: center; */
+    /* justify-self: stretch; */
 
-    grid-area: 2/1/4/3;
+    /* align-self: start; */
+    /* align-self: end; */
+    /* align-self: center; */
+    /* align-self: stretch; */
 }
